Fixing unresponsive patient chart on smaller screens

--- a/src/view-components/tabbed-view/tabbed-view.css
+++ b/src/view-components/tabbed-view/tabbed-view.css
@@ -59,3 +59,11 @@
 .summariesnav a {
   color: inherit;
 }
+
+.routesContainer {
+  margin: 1.3125rem;
+}
+
+:global(.omrs-breakpoint-lt-tablet) .routesContainer {
+  margin: 0.625rem;
+}
